@@ -1,4 +1,5 @@
 DIST ksplice-0.8.2-src.tar.gz 66252 RMD160 f4fe4391f57356dbd6bfc12a395a0fef1aaadf66 SHA1 95ae17f5275abb00c75e16feb397f2d7632bb0b7 SHA256 5c202c25fa5ebf167a0a4ab168babc6c35e587349cfef80f16c1dc638a9dd67d
 EBUILD ksplice-0.8.2.ebuild 440 RMD160 f44295ca907d0581aa93e317c1d2594eed489cf3 SHA1 335ec00ce4a65d8fce62d953f96d2cf6bb035fd4 SHA256 a3b722c0f37d8a902c3713b7951dee166d6a38f99ea7c925c339713ff0478bfc
-MISC ChangeLog 408 RMD160 eaf3c9d330631ff3fff4002159b18fab1e3242c0 SHA1 09ee46c8bc07557971afc27bc0ae623152e2a8e2 SHA256 6f19a6bdbe76fc80ad27d918c950a36a1191fed85d0b1ce527d7ebe0dc6aa334
+EBUILD ksplice-9999.ebuild 461 RMD160 f68d2e81c4c94b66b439ad979a545c3040f2ba3b SHA1 22e84bc033e7d4ec82493b1c936e676255c9cddd SHA256 d504345232a36038fedbce8ef4aa9ac2a2a5f570d5bfe705efe01654638ead3d
+MISC ChangeLog 507 RMD160 00ad1f2912b007290ead8acc9930b38d83db8479 SHA1 becdac82ec4031e75f4f9503e72313da5a6d36ca SHA256 787c1df4adf6066e6e87a11fec428da1ee0b17da46fdd3fe102f206e369d5f97
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
